syntax = "proto3";

package pb;

option go_package = "go-todolist-grpc/api/pb";

message CreateCategoryRequest {
    string name = 1;
}

message GetCategoryRequest {
    int32 id = 1;
}

message ListCategoryRequest {
    int32 page = 1;
    int32 page_size = 2;
    optional string sort_by = 3;
    optional int32 category_id = 4;
    optional string name = 5;
}

message UpdateCategoryRequest {
    int32 id = 1;
    optional string name = 2;
}
  
  message DeleteCategoryRequest {
    int32 id = 1;
}
